# Copyright 2018 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

config("gtest_config") {
  visibility = [ ":gtest" ]

  include_dirs = [
    "googletest/include",
    "googlemock/include",
  ]

  ldflags = [ "-pthread" ]
}

source_set("gtest") {
  testonly = true

  sources = [
    "googlemock/src/gmock-all.cc",
    "googletest/src/gtest-all.cc",
  ]

  include_dirs = [
    "googletest",
    "googlemock",
  ]

  all_dependent_configs = [ ":gtest_config" ]
}

source_set("gtest_main") {
  testonly = true

  sources = [ "googlemock/src/gmock_main.cc" ]

  deps = [ ":gtest" ]
}
